Added search and paint functionalities

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link href="index.css" rel="stylesheet"> -->
+        <link href="app/index.css" rel="stylesheet">
+        <script
+          src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+          integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+          crossorigin="anonymous">
+         </script>
     </head>
     <body>
         <div id="root"></div>
