Included Express to serve the application over heroku

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="app/index.css" rel="stylesheet">
+        <link href="/index.css" rel="stylesheet">
         <script
           src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
           integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
@@ -10,6 +10,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="dist/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
